--- a/style/styles.css
+++ b/style/styles.css
@@ -58,6 +58,9 @@ body {
     color: floralwhite; 
 }
 
+.hope-copyright p{
+    color:white;
+}
 
 address {
     font-size: 80%;
@@ -65,39 +68,17 @@ address {
     color: #0f0f0f; 
 }
   
-
- 
 .tab-content {
     border-left: 1px solid #ddd;
     border-right: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
     padding: 10px; 
 }
+
+
+
   
-  .carousel {
-    background: #512DA8; }
-    .carousel .carousel-item {
-      height: 300px; }
-      .carousel .carousel-item img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        min-height: 300px; }
-  
-  #carouselButton {
-    right: 0px;
-    position: absolute;
-    bottom: 0px;
-    z-index: 1; }
-  
-  .modal .modal-content {
-    background: #512DA8;
-    color: floralwhite; }
-    .modal .modal-content .modal-body {
-      background: #D1C4E9;
-      color: black; }
-  
-  /*# sourceMappingURL=styles.css.map */
+
   
 @media (max-width: 992px) {
     .nav-item {
@@ -113,8 +94,20 @@ address {
     }
     .hope-copyright p{
         font-size: small;
+        
     }
+    /*
+    .carousel .carousel-item {
+        width: 651px;
+        height: 336px; 
+    }
+    .carousel .carousel-item img{
+        width: 651px;
+        height: 336px; 
+    }
+    */
 }
+
 
 @media (max-width: 576px) {
 
@@ -126,5 +119,14 @@ address {
         padding: 100px 0px 0px 0px;
         z-index: 0; 
     }
-    
+    /*
+    .carousel .carousel-item {
+        width: 325px;
+        height: 168px; 
+    }
+    .carousel .carousel-item img{
+        width: 325px;
+        height: 168px; 
+    }
+    */
 }
