--- a/style/styles.css
+++ b/style/styles.css
@@ -98,8 +98,8 @@ address {
     }
     
     .carousel .carousel-item {
-        width: 651px;
-        height: 600px; 
+        width: 100%;
+        height: auto; 
     }
     /*
     .carousel .carousel-item img{
