--- a/style/styles.css
+++ b/style/styles.css
@@ -77,7 +77,10 @@ address {
 
 
 
-  
+.carousel .carousel-item {
+    width: 100%;
+    height: auto; 
+} 
 
   
 @media (max-width: 992px) {
@@ -97,11 +100,12 @@ address {
         
     }
     
+        /*
     .carousel .carousel-item {
-        width: 100%;
-        height: auto; 
+        width: 651px;
+        height: 336px; 
     }
-    /*
+
     .carousel .carousel-item img{
         width: 651px;
         height: 336px; 
