--- a/style/styles.css
+++ b/style/styles.css
@@ -76,12 +76,10 @@ address {
 }
 
 
-
-.carousel .carousel-item {
+.row-carousel{
     width: 100%;
     height: 100%; 
-} 
-
+}
   
 @media (max-width: 992px) {
     .nav-item {
