--- a/style/styles.css
+++ b/style/styles.css
@@ -75,12 +75,10 @@ address {
     padding: 10px; 
 }
 
-
-.row-carousel{
+.carousel-item img{
     width: 100%;
-    height: 100%; 
-}
-  
+    height: auto;
+}  
 @media (max-width: 992px) {
     .nav-item {
         font-size: small;
