--- a/style/styles.css
+++ b/style/styles.css
@@ -77,8 +77,11 @@ address {
 
 .carousel-item img{
     width: 100%;
-    height: auto;
+    height: 100%;
 }  
+
+
+
 @media (max-width: 992px) {
     .nav-item {
         font-size: small;
