--- a/style/styles.css
+++ b/style/styles.css
@@ -56,10 +56,16 @@ body {
     min-height: 400px; 
 }
 
+.nav-item {
+    padding-bottom: 50px;
+}
 
 @media (max-width: 992px) {
+
+
     .nav-item {
         font-size: small;
+        
     }
     .navbar-brand img{
         max-width: 100px;
@@ -81,10 +87,75 @@ body {
     .navbar-brand {
         width: 50px;
         height: auto;
+       
     }
     body {
         padding: 100px 0px 0px 0px;
         z-index: 0; 
     }
 }
+
+
+.navbar {
+    overflow: hidden;
+  }
+  
+  
+  /* The dropdown container */
+  .dropdown {
+    float: left;
+  }
+  
+  /* Dropdown button */
+  .dropdown-all .dropdown-button {
+    border: none;
+    outline: none;
+    background-color: inherit;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+  }
+  
+  /* Dropdown content (hidden by default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: black;
+
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    list-style: none;
+    text-decoration: none;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content li {
+    font-size: small;
+    float: none;
+    color: black;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+
+  /* Show the dropdown menu on hover */
+  .dropdown-all:hover .dropdown-content {
+    display: block;
+  }
+
+  .dropdown-itemx{
+    text-decoration: none;
+  }
+
+
+
+
+
+
+.vision-subtitle{
+
+}
+
+
 
